Set version to 1.1 as haven't released 1.2
- revert number

--- a/changelog.txt
+++ b/changelog.txt
@@ -2,7 +2,5 @@
 ----
 Changed use of section where no headers
 Changed sidebars to use asides for widgets
-
-1.2
-----
 Various responsive fixes
+Add in github page
