Updating version number to 1.1.1 for padding

--- a/changelog.txt
+++ b/changelog.txt
@@ -4,3 +4,7 @@ Changed use of section where no headers
 Changed sidebars to use asides for widgets
 Various responsive fixes
 Add in github page
+
+1.1.1
+-----
+Padding fixes for content / content header on larger screen resolutions
